--- a/website/newsletter/205/index.mdx
+++ b/website/newsletter/205/index.mdx
@@ -13,7 +13,7 @@ The React Native world is quite active too, with many great releases from infras
 
 Node.js 23 is out, and we have 4 new features ready to be standardized in ES2025!
 
-🙏 The newsletter isn't growing as fast as it used to. I'd really appreciate it if you'd recommend it with your friends and colleagues. You can just forward them this email (or [the online version link](https://thisweekinreact.com/newsletter/205)), and they'll decide if it's worth subscribing to. Thanks!
+🙏 The newsletter isn't growing as fast as it used to. I'd really appreciate it if you'd recommend it to your friends and colleagues. You can just forward them this email (or [the online version link](https://thisweekinreact.com/newsletter/205)), and they'll decide if it's worth subscribing to. Thanks!
 
 <!-- truncate -->
 
