--- a/website/newsletter/206/index.mdx
+++ b/website/newsletter/206/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /206
 title: "This Week In React #206: ..."
-authors: [slorber]
+authors: [matthieugicquel,cyrilbo]
 date: 10-23-2024
 unlisted: true
 ---
@@ -31,15 +31,15 @@ import Support from "../_support.mdx";
 Handsontable is [a feature-rich data grid](https://handsontable.com/demo?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=twirsep11) designed for React developers who need a powerful, customizable, and accessible solution to manage complex data.
 
 *   A unique **spreadsheet-like interface** with sorting, filtering, and CRUD operations
-    
+
 *   Advanced operations like conditional formatting and **400 built-in formulas**, similar to Excel
-    
+
 *   **Customizable editors and renderers**, allowing dropdowns, menus or custom components within grid cells to fit specific use cases
-    
+
 *   **Optimized performance** for smooth and responsive interactions
-    
+
 *   **Accessibility with WCAG 2.1 compliance** for better support for users with disabilities
-    
+
 
 Handsontable adapts to various use cases, from enterprise applications to simple websites, offering performance and flexibility trusted by companies worldwide.
 
@@ -49,7 +49,39 @@ Handsontable adapts to various use cases, from enterprise applications to simple
 
 ## ⚛️ React {#react}
 
-<Todo />
+[![Next.js 15](/emails/issues/206/nextjs-15.jpg)](https://nextjs.org/blog/next-15)
+
+[**Next.js 15**](https://nextjs.org/blog/next-15)
+
+Just in time for Next.js conf, Next.js 15 is officially released. There are no major changes since RC2, just a few stability fixes.
+
+In this v15:
+
+- The caching behavior is flipped with most things (eg `fetch` requests) not cached by default anymore.
+- App router uses React 19 RC, pages router stays on React 18
+- Using turbopack dev is now recommended (webpack is still supported)
+- `@next/codemod upgrade` facilitates migrating
+
+There’s of course a slew of other DX, security and performance improvements.
+
+---
+
+- 📊 [State of React 2024 survey is out](https://survey.devographics.com/en-US/survey/state-of-react/2024?source=this_week_in_react)
+- 🐦 [React Devtools v6 has been published](https://x.com/leeerob/status/1846954524864594350) with server components support.
+- 📜 [Server Side State management in NextJS: a deep dive into React Cache](https://www.yoseph.tech/posts/nextjs/server-side-state-management-in-nextjs-a-deep-dive-into-react-cache): using `cache`, `unstable_cache`, and `patched fetch`, explaining how these tools can optimize state handling, reduce prop drilling, and simplify server-side code.
+- 📜 [Remix Todo App](https://www.udohjeremiah.com/blog/remix-todo-app-part-1-building-the-app-layout-and-structure): A detailed guide in 6 parts.
+- 📜 [How Vercel adopted microfrontends](https://vercel.com/blog/how-vercel-adopted-microfrontends)
+- 📜 [Perfectly Fitting Text to Container in React](https://sentry.engineering/blog/perfectly-fitting-text-to-container-in-react)
+- 📜 [Creating a Keyboard Shortcut Hook in React](https://www.taniarascia.com/keyboard-shortcut-hook-react/)
+- 📦 [React Compiler beta release](https://react.dev/blog/2024/10/21/react-compiler-beta-release): It’s already in use in tens of thousands of components at Meta, they now want community feedback. This release adds official support for React 17 and 18. You can already add the ESLint plugin to prepare your codebase.
+- 📦 [Turbopack Dev is now stable](https://nextjs.org/blog/turbopack-for-development-stable): A slow dev server has been a usual pain point when working with Next.js. Vercel has been working on a rust-based webpack replacement for 2 years, and it’s finally safe to use on all projects that don’t rely on unusual webpack plugins.
+- 📦 [Chakra UI v3](https://www.chakra-ui.com/blog/00-announcing-v3): A full rewrite, with more components, semantic tokens and better performance.
+- 📦 [react-render-stream-testing-library v1.0](https://github.com/testing-library/react-render-stream-testing-library): To make detailed, render-per-render assertions when testing components and hooks. In many cases it amounts to testing implementation details but it will be very useful for library authors or in perf-sensitive scenarios.
+- 📦 [Sidebar - shadcn/ui](https://ui.shadcn.com/docs/components/sidebar)
+- 🔗 [GitHub - ethanniser/NextMaster: A highly performant replica of McMaster-Carr using Next.js](https://github.com/ethanniser/NextMaster): Partial prerendering with dynamic streaming, eliminated loading spinners via server-side data fetching, advanced image prefetching, triggered links on `onMouseDown` event, AI-generated dataset using GPT-4o-mini, product images generated with stable-diffusion-v1-5, UI scaffolding with V0 from screenshots.
+- 🎥 [Wes Bos - How is this Website so fast!?](https://www.youtube.com/watch?v=-Ln-8QM8KhQ): About the McMaster-Carr website.
+- 🎥 [Tanner Linsley - An Early Glimpse of TanStack Start](https://www.youtube.com/watch?v=AuHqwQsf64o)
+- 🎥 [Jack Herrington - What I Discovered When I Compared React and NextJS for Astro 5's Server Islands](https://www.youtube.com/watch?v=rCkhCG7n8sA)
 
 - 💸 [Omlet – Scan your repos and measure how and where components are used](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-quick-link-oct-2024)
 
@@ -69,9 +101,26 @@ Lazar Nikolov and Sarah Guthals are hosting a free workshop on [Implementing Cle
 
 ## 📱 React-Native {#react-native}
 
-This section is authored by [Benedikt](https://twitter.com/bndkt).
-
 <Todo />
+
+[**React Native 0.76**](LINK)
+
+React Native 0.76 is out with major updates!
+
+The New Architecture is now enabled by default for better performance, there's a new React Native DevTools for improved debugging, and new style props like `boxShadow` and `filter` for enhanced UI effects (available only with the new architecture). Be aware of some breaking changes: minimum SDK requirements have been raised to iOS 15.1 and Android SDK 24 (Android 7). Time to upgrade and check it out!
+
+- 👀 [React Native PR - Add support for CSS `display: contents`](https://github.com/facebook/react-native/pull/46584): Define views that have zero impact on the layout but to which you can still attach event handlers. One possible usage is in `GestureDetector` from `react-native-gesture-handler`, which relies on direct native views to handle touch gestures without affecting layout, to fix issues like automatic collapsing of views in components.
+- 📖 [React Native DevTools new doc: available in React Native 0.76](https://reactnative.dev/docs/next/react-native-devtools)
+- 📜 [PostHog - How we built mobile replay (and why it took so long)](https://posthog.com/blog/mobile-session-replay): Their React Native SDK 3.2 now has support for session replay (beta).
+- 📜 [Hacking Expo SQLite into React Native MacOS](https://coolsoftware.dev/blog/hacking-expo-sqlite-into-react-native-macos/)
+- 📜 [How to bring your React Native apps to life using sensors](https://expo.dev/blog/how-to-bring-your-react-native-apps-to-life-using-sensors)
+- 📜 [How Kraken fixed performance issues via incremental adoption of the React Native New Architecture](https://blog.kraken.com/product/engineering/how-kraken-fixed-performance-issues-via-incremental-adoption-of-the-react-native-new-architecture)
+- 📜 [Introducing react-native-whip-whep](https://blog.swmansion.com/introducing-react-native-whip-whep-ac9e5588d4da?source=rss----e003bf129483---4)
+- 📜 [React Native’s New Architecture, The Tricky Parts](https://blog.swmansion.com/react-natives-new-architecture-the-tricky-parts-1-2-bb0c16950f2d): : View flattening, View recycling, libraries support.
+- 📦 [react-native-mmkv 3.1](https://x.com/mrousavy/status/1848666575382966401)
+- 📦 [expo-in-app-updates](https://github.com/SohelIslamImran/expo-in-app-updates)
+- 📦 [expo-import-cost](https://github.com/SohelIslamImran/expo-import-cost)
+- 🎥 [Catalin Miron - TikTok incoming messages animation](https://www.youtube.com/watch?v=dFUaYZ_AXcc)
 
 - 💸 [Stay up-to-date with React Native & Expo News with notJust Newsletter](https://www.notjust.dev/newsletter?utm_source=twir&utm_medium=email&utm_campaign=newsletter)
 
@@ -79,7 +128,13 @@ This section is authored by [Benedikt](https://twitter.com/bndkt).
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 📜 [Brisa Framework - Server Actions have been fixed](https://brisa.build/blog/server-actions-have-been-fixed)
+- 📜 [Why I’m skeptical of rewriting JavaScript tools in “faster” languages](https://nolanlawson.com/2024/10/20/why-im-skeptical-of-rewriting-javascript-tools-in-faster-languages/)
+- 📜 [View Transitions Staggering](https://frontendmasters.com/blog/view-transitions-staggering/)
+- 📦 [Svelte v5](https://svelte.dev/blog/svelte-5-release-candidate)
+- 📦 [Turborepo v2.2 - Experimental repository querying with GraphQL, cache safety warnings, automatic GitHub action comparisons](https://turbo.build/blog/turbo-2-2-0)
+- 📦 [is-my-node-vulnerable - Package that checks if your Node.js installation is vulnerable to known security vulnerabilities](https://github.com/RafaelGSS/is-my-node-vulnerable)
+- 📦 [Node.js v23 - Support for loading ES modules with require(), dropped 32-bit Windows support, stabilized --run command, enhanced test runner with glob patterns for coverage](https://openjsf.org/blog/announcing-node.js-23-key-features-and-enhancement)
 
 ---
 
@@ -87,6 +142,6 @@ This section is authored by [Benedikt](https://twitter.com/bndkt).
 
 <Todo />
 
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![async functions contagion](/emails/issues/206/meme.jpg)](https://x.com/sebastienlorber/status/1848743816162869640)
 
 See ya! 👋
