206 - still missing RN 0.76 release

--- a/website/newsletter/206/index.mdx
+++ b/website/newsletter/206/index.mdx
@@ -8,7 +8,15 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+Cyril and Matthieu from [Theodo Apps (formerly BAM)](https://apps.theodo.com/en?utm_source=thisweekinreact) here 👋, standing in for Seb to bring you the latest news from the React and React Native worlds.
+
+Big updates this week for the React world! Next.js 15 is officially out with key changes around caching and performance, plus the React Compiler has hit beta — lots to look forward to there.
+
+React Native 0.76 also dropped, with the new architecture now enabled by default and some cool new style props like boxShadow and filter.
+
+We’ve got a bunch of great articles too, from optimizing state with React Cache to a deep dive into React Native's new architecture.
+
+Let’s dive in!
 
 <!-- truncate -->
 
@@ -101,9 +109,9 @@ Lazar Nikolov and Sarah Guthals are hosting a free workshop on [Implementing Cle
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+<Todo /> <!-- Add RN release link -->
 
-[**React Native 0.76**](LINK)
+[**React Native 0.76**](https://reactnative.dev/blog)
 
 React Native 0.76 is out with major updates!
 
@@ -139,8 +147,6 @@ The New Architecture is now enabled by default for better performance, there's a
 ---
 
 ## 🤭 Fun {#fun}
-
-<Todo />
 
 [![async functions contagion](/emails/issues/206/meme.jpg)](https://x.com/sebastienlorber/status/1848743816162869640)
 
