--- a/website/newsletter/206/index.mdx
+++ b/website/newsletter/206/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /206
-title: "This Week In React #206: ..."
+title: "This Week In React #206: Next.js, React Compiler, Turbopack, Chakra UI, Remix, React Cache, Shadcn, Microfrontends, React DevTools, React Native, react-native-mmkv, Svelte, Turborepo, Node.js..."
 authors: [matthieugicquel,cyrilbo]
 date: 10-23-2024
 unlisted: true
@@ -119,7 +119,7 @@ The New Architecture is now enabled by default for better performance, there's a
 
 - 👀 [React Native PR - Add support for CSS `display: contents`](https://github.com/facebook/react-native/pull/46584): Define views that have zero impact on the layout but to which you can still attach event handlers. One possible usage is in `GestureDetector` from `react-native-gesture-handler`, which relies on direct native views to handle touch gestures without affecting layout, to fix issues like automatic collapsing of views in components.
 - 📖 [React Native DevTools new doc: available in React Native 0.76](https://reactnative.dev/docs/next/react-native-devtools)
-- 📜 [PostHog - How we built mobile replay (and why it took so long)](https://posthog.com/blog/mobile-session-replay): Their React Native SDK 3.2 now has support for session replay (beta).
+- 📜 [How we built mobile replay (and why it took so long)](https://posthog.com/blog/mobile-session-replay): Their React Native SDK 3.2 now has support for session replay (beta).
 - 📜 [Hacking Expo SQLite into React Native MacOS](https://coolsoftware.dev/blog/hacking-expo-sqlite-into-react-native-macos/)
 - 📜 [How to bring your React Native apps to life using sensors](https://expo.dev/blog/how-to-bring-your-react-native-apps-to-life-using-sensors)
 - 📜 [How Kraken fixed performance issues via incremental adoption of the React Native New Architecture](https://blog.kraken.com/product/engineering/how-kraken-fixed-performance-issues-via-incremental-adoption-of-the-react-native-new-architecture)
