--- a/website/newsletter/206/index.mdx
+++ b/website/newsletter/206/index.mdx
@@ -82,11 +82,10 @@ There’s of course a slew of other DX, security and performance improvements.
 - 📦 [react-render-stream-testing-library](https://github.com/testing-library/react-render-stream-testing-library): To make detailed, render-per-render assertions when testing components and hooks. In many cases it amounts to testing implementation details but it will be very useful for library authors or in perf-sensitive scenarios.
 - 📦 [shadcn/ui - Sidebar component](https://ui.shadcn.com/docs/components/sidebar)
 - 📦 [next-intl 3.22 - Incrementally moving forward](https://next-intl-docs.vercel.app/blog/next-intl-3-22)
-- 🔗 [GitHub - ethanniser/NextMaster: A highly performant replica of McMaster-Carr using Next.js](https://github.com/ethanniser/NextMaster): Partial prerendering with dynamic streaming, eliminated loading spinners via server-side data fetching, advanced image prefetching, triggered links on `onMouseDown` event, AI-generated dataset using GPT-4o-mini, product images generated with stable-diffusion-v1-5, UI scaffolding with V0 from screenshots.
 - 🎥 [Theo - Next.js is hiding something...](https://www.youtube.com/watch?v=g4g2YUtjh9g): Early sneak peek of upcoming features not even mentioned in the Next.js 15 release post, including the `'use cache'` directive, `cacheTag()` and `cacheLife` APIs.
-- 🎥 [Wes Bos - How is this Website so fast!?](https://www.youtube.com/watch?v=-Ln-8QM8KhQ): About the McMaster-Carr website.
 - 🎥 [Tanner Linsley - An Early Glimpse of TanStack Start](https://www.youtube.com/watch?v=AuHqwQsf64o)
 - 🎥 [Jack Herrington - What I Discovered When I Compared React and NextJS for Astro 5's Server Islands](https://www.youtube.com/watch?v=rCkhCG7n8sA)
+- 🔗 [NextMaster - Highly performant replica of McMaster-Carr using Next.js](https://github.com/ethanniser/NextMaster): McMaster-Carr (US supply company) website has been trending on Twitter as being very fast. This repo is a modern Next.js 15 port, even faster.
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -142,6 +141,10 @@ The New Architecture is now enabled by default for better performance, there's a
 ---
 
 ## 🤭 Fun {#fun}
+
+[![head body knees and toes html](/emails/issues/206/meme2.jpg)](https://x.com/mrousavy/status/1846497922675810533)
+
+Shameless repost for Next.js 15 release 😄
 
 [![async functions contagion](/emails/issues/206/meme.jpg)](https://x.com/sebastienlorber/status/1848743816162869640)
 
