--- a/website/newsletter/206/index.mdx
+++ b/website/newsletter/206/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /206
-title: "This Week In React #206: Next.js, Compiler, DevTools, Turbopack, nuqs, Chakra UI, Remix, shadcn/ui, Microfrontends, React Native, react-native-mmkv, NewArch, Svelte, Turborepo..."
+title: "This Week In React #206: Next.js, Compiler, DevTools, Turbopack, nuqs, Chakra UI, Remix, shadcn/ui, Microfrontends, Fumadocs, React Native, react-native-mmkv, NewArch, Svelte, Turborepo..."
 authors: [matthieugicquel, cyrilbo]
 date: 10-23-2024
 unlisted: true
@@ -82,6 +82,7 @@ There’s of course a slew of other DX, security and performance improvements.
 - 📦 [react-render-stream-testing-library](https://github.com/testing-library/react-render-stream-testing-library): To make detailed, render-per-render assertions when testing components and hooks. In many cases it amounts to testing implementation details but it will be very useful for library authors or in perf-sensitive scenarios.
 - 📦 [shadcn/ui - Sidebar component](https://ui.shadcn.com/docs/components/sidebar)
 - 📦 [next-intl 3.22 - Incrementally moving forward](https://next-intl-docs.vercel.app/blog/next-intl-3-22)
+- 📦 [Fumadocs 14 - Docs framework that works on Next.js 15 App Router](https://fumadocs.vercel.app/blog/v14)
 - 🎥 [Theo - Next.js is hiding something...](https://www.youtube.com/watch?v=g4g2YUtjh9g): Early sneak peek of upcoming features not even mentioned in the Next.js 15 release post, including the `'use cache'` directive, `cacheTag()` and `cacheLife` APIs.
 - 🎥 [Tanner Linsley - An Early Glimpse of TanStack Start](https://www.youtube.com/watch?v=AuHqwQsf64o)
 - 🎥 [Jack Herrington - What I Discovered When I Compared React and NextJS for Astro 5's Server Islands](https://www.youtube.com/watch?v=rCkhCG7n8sA)
