--- a/website/newsletter/206/index.mdx
+++ b/website/newsletter/206/index.mdx
@@ -132,6 +132,7 @@ The New Architecture is now enabled by default for better performance, there's a
 
 ## 🔀 Other {#other}
 
+- 📜 [The story of web framework Hono](https://blog.cloudflare.com/the-story-of-web-framework-hono-from-the-creator-of-hono/): "In contrast to the Next.js framework, which started from the client-side with React, Hono is trying to become a full-stack framework starting from the server-side"
 - 📜 [Why I’m skeptical of rewriting JavaScript tools in “faster” languages](https://nolanlawson.com/2024/10/20/why-im-skeptical-of-rewriting-javascript-tools-in-faster-languages/)
 - 📜 [View Transitions Staggering](https://frontendmasters.com/blog/view-transitions-staggering/)
 - 📜 [Brisa Framework - Server Actions have been fixed](https://brisa.build/blog/server-actions-have-been-fixed)
